# air_hockey

./: .gitignore  CMakeLists.txt  README.md  package.xml
EKF/: dataClass.m  dataReal.m  dataSim.m  dataToy.m  iam_ekf.m
EKF/extra/: sanityCheck.m
config/: hit_properties_air_hockey.yaml  recorder_properties.yaml  ros_topics_air_hockey.yaml
data/: README.md
data/airhockey_consistency_with_NS_inertia_shaping/50_hits-config_1-object_1/: IIWA_7_hit_15.csv  IIWA_7_hit_19.csv  IIWA_7_hit_21.csv  IIWA_7_hit_24.csv  IIWA_7_hit_26.csv  IIWA_7_hit_27.csv  (+18 more)
docker/: Dockerfile  build-image.sh  build-server.sh  start_docker.sh
include/: AirHockey.hpp  Recorder.hpp
launch/: air_hockey_real.launch  air_hockey_real_with_sim.launch  air_hockey_sim.launch  optitrack_with_transform_to_base.launch
object_models/: table.urdf
python/: analyse_data.py  generate_random_fluxes.py  gmm_analysis.py  golf_optimization.py  paper_plots.py  plot_hit_data.py  plot_hit_info.py  process_data.py  process_data_for_EKF.py  process_data_for_IAM_database.py  process_data_for_analysis.py
python/utils/: data_handling_functions.py  data_processing_functions.py  iterative_gmr.py  test_calculations.py  test_plots.py
python_data_processing/: analyse_data.py  plot_hit_data.py  process_data.py
python_data_processing/gmm_torch/: gmm.py
src/: AirHockey.cpp  Recorder.cpp  optitrack_transform_publisher.cpp
src/air_hockey/: CMakeLists.txt  README.md  package.xml  setup.md  usage.md
src/iiwa_toolkit/: CMakeLists.txt  README.md  package.xml
src/iiwa_toolkit/cfg/: passive_cfg_params.cfg
src/iiwa_toolkit/config/: marker_following_params.yaml  passive_track_params.yaml  passive_track_params_dual.yaml  passive_track_params_dual_real.yaml  passive_track_params_dual_sim.yaml
src/iiwa_toolkit/include/: passive_control.h
src/iiwa_toolkit/launch/: limbo_interface_real.launch  marker_following_gazebo.launch  marker_following_real.launch  passive_track_gazebo.launch  passive_track_gazebo_dual.launch  passive_track_real.launch  passive_track_real_dual.launch  passive_track_test.launch
src/iiwa_toolkit/src/: node_passive_track.cpp  passive_control.cpp
(+16815 files in other folders)
