<?xml version="1.0"?>
<package format="2">
  <name>air_hockey</name>
  <version>1.0.0</version>
  <description>The air_hockey package</description>
  <maintainer email="harshit.khurana@epfl.ch">harshit</maintainer>
  <maintainer email="maxime.gautier@epfl.ch">maxime</maintainer>

  <license>TODO</license>


  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
</package>
